--- a/.github/workflows/contact_converter.yml
+++ b/.github/workflows/contact_converter.yml
@@ -26,7 +26,7 @@ jobs:
             # Lyamkin (08-01-2024)   $AnyToneTemplate = '"--LINEnumber--","--DMRID--","--CALLSIGN--","Private Call","None"' -join "`r`n"
             $AnyToneTemplate = '"--LINEnumber--","--DMRID--","--CALLSIGN--","Name","","","","","Private Call","None"' -join "`r`n"
             Remove-Item $AnyToneCSVfile -Force -ErrorAction SilentlyContinue
-            Add-Content -Path $AnyToneCSVfile -Value '"No.","Radio ID","Name","","","","","Call Type","Call Alert"'
+            Add-Content -Path $AnyToneCSVfile -Value '"No.","Radio ID","","","","","Call Type","Call Alert"'
             Add-Content -Path $AnyToneCSVfile -Value '"1","9","QRA TG9","","","","","Group Call","None"'
             Add-Content -Path $AnyToneCSVfile -Value '"2","5973","QRA-5973","","","","","Group Call","None"'
             # Lyamkin (08-01-2024)   Add-Content -Path $AnyToneCSVfile -Value '"No.","Radio ID","Name","Call Type","Call Alert"'
