--- a/.github/workflows/contact_converter.yml
+++ b/.github/workflows/contact_converter.yml
@@ -24,9 +24,9 @@ jobs:
             $DMRIdsContent = Get-Content ./DMRIds.dat | Where-Object { $_ -notmatch '^.*ECHO.*$' -and $_ -notmatch '^$' } | Sort-Object
             $AnyToneCSVfile = "./Devices_Contact_List/AnyTone_Contacts.csv"
             # Lyamkin (08-01-2024)   $AnyToneTemplate = '"--LINEnumber--","--DMRID--","--CALLSIGN--","Private Call","None"' -join "`r`n"
-            $AnyToneTemplate = '"--LINEnumber--","--DMRID--","--CALLSIGN--","Name","","","","","Private Call","None"' -join "`r`n"
+            $AnyToneTemplate = '"--LINEnumber--","--DMRID--","--CALLSIGN--","Name","City","State","Country","Remarks","Private Call","Call Alert"' -join "`r`n"
             Remove-Item $AnyToneCSVfile -Force -ErrorAction SilentlyContinue
-            Add-Content -Path $AnyToneCSVfile -Value '"No.","Radio ID","","","","","Call Type","Call Alert"'
+            Add-Content -Path $AnyToneCSVfile -Value '"No.","Radio ID","Callsign","Name","City","State","Country","Remarks","Call Type","Call Alert"'
             Add-Content -Path $AnyToneCSVfile -Value '"1","9","QRA TG9","","","","","Group Call","None"'
             Add-Content -Path $AnyToneCSVfile -Value '"2","5973","QRA-5973","","","","","Group Call","None"'
             # Lyamkin (08-01-2024)   Add-Content -Path $AnyToneCSVfile -Value '"No.","Radio ID","Name","Call Type","Call Alert"'
