--- a/.github/workflows/contact_converter.yml
+++ b/.github/workflows/contact_converter.yml
@@ -24,7 +24,7 @@ jobs:
             $DMRIdsContent = Get-Content ./DMRIds.dat | Where-Object { $_ -notmatch '^.*ECHO.*$' -and $_ -notmatch '^$' } | Sort-Object
             $AnyToneCSVfile = "./Devices_Contact_List/AnyTone_Contacts.csv"
             # Lyamkin (08-01-2024)   $AnyToneTemplate = '"--LINEnumber--","--DMRID--","--CALLSIGN--","Private Call","None"' -join "`r`n"
-            $AnyToneTemplate = '"--LINEnumber--","--DMRID--","--CALLSIGN--","","","","","","Private Call","Nome"' -join "`r`n"
+            $AnyToneTemplate = '"--LINEnumber--","--DMRID--","--CALLSIGN--","","","","","","Private Call","None"' -join "`r`n"
             Remove-Item $AnyToneCSVfile -Force -ErrorAction SilentlyContinue
             Add-Content -Path $AnyToneCSVfile -Value '"No.","Radio ID","Callsign","Name","City","State","Country","Remarks","Call Type","Call Alert"'
             Add-Content -Path $AnyToneCSVfile -Value '"1","9","QRA TG9","","","","","","Group Call","None"'
